pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidBytes1.pkl
foo = Bytes(0, 1, 2, 3, 0xff)
